Minor lazy oading demo fixes

--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -20,10 +20,10 @@
       next demo if you need to load different types of the bundles.
     </p>
     <p>
-      This demo shows how to load the <code>component-definition.js</code>
-      script which defines the custom element for the <code>/lazy</code> route.
+      This demo shows how to load the <code>user.bundle.js</code>
+      script which defines the custom element for the <code>/user/:id</code> route.
       Check the network tab in the browser DevTools to see that the script is
-      loaded only after clicking at the <code>/lazy</code> route link.
+      loaded only after clicking the <code>/user/guest</code> link.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-1" iframe-src="iframe.html">
       <template preserve-content>
@@ -56,10 +56,9 @@
       Route Actions</a>).
     </p>
     <p>
-      This demo shows a way to lazily add an HTML import. The <code>
-      component-definition.html</code> file contains entire Polymer 2 component
-      definition including a template, a class, and a script that defines a
-      custom element.
+      This demo shows a way to lazily add an HTML import. The <code>user.bundle.html</code>
+      file contains entire Polymer 2 component definition including a template, a class,
+      and a script that defines a custom element.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-2" iframe-src="iframe.html">
       <template preserve-content>
