Restore the component in basic demo

--- a/demo/vaadin-router-basic-demos.html
+++ b/demo/vaadin-router-basic-demos.html
@@ -49,7 +49,7 @@
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
-            {path: '/'},
+            {path: '/', component: 'x-home-view'},
             {path: '/users', component: 'x-user-list'},
             {path: '/users/:user', component: 'x-user-profile'},
           ]);
