Add the typed route parameters demo

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -15,4 +15,5 @@
 <link rel="import" href="demo-elements/x-user-profile.html">
 <link rel="import" href="demo-elements/x-not-found-view.html">
 <link rel="import" href="demo-elements/x-profile-view.html">
+<link rel="import" href="demo-elements/x-user-numeric-view.html">
 <link rel="import" href="demo-elements/x-user-not-found-view.html">
