--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -145,6 +145,34 @@
       </template>
     </vaadin-demo-snippet>
 
+    <h3>Typed Route Parameters</h3>
+    <p>
+      The route can be configured so that only specific characters are accepted for a parameter value.
+      Other characters would not meet the check and continue the route resolution. Please note that you
+      only can use unnamed parameters in this case, as the custom RegExp is needed to achieve that behavior.
+      One possible alternative is to use <a href="#vaadin-router-route-actions-demos">Route Actions</a>
+      and check the <code>context.params</code>.</p>
+    <vaadin-demo-snippet id="vaadin-router-route-parameters-demo-4" iframe-src="iframe.html">
+      <template preserve-content>
+        <a href="/">Home</a>
+        <a href="/users/list">All Users</a>
+        <a href="/users/42">User 42</a>
+        <a href="/users/guest">Guest</a>
+        <div id="outlet"></div>
+        <script type="module">
+          // import {Router} from '@vaadin/router';
+          const {Router} = window.Vaadin;
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            {path: '/users/list', component: 'x-user-list'},
+            {path: '/users/([0-9]+)', component: 'x-user-numeric-view'},
+            {path: '/users/(.*)', component: 'x-user-not-found-view'},
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
   </template>
   <script>
     class VaadinRouterRouteParametersDemos extends DemoReadyEventEmitter(ElementDemo(Polymer.Element)) {
