--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -35,7 +35,8 @@
 
       const throttler = document.querySelector('#throttler');
       afterEach(function() {
-        return throttler.throttle(this);
+        const test = this; // eslint-disable-line no-invalid-this
+        return throttler.throttle(test);
       });
 
       describe('JS API (basic functionality)', () => {
