Address lazy loading demo review feedback

--- a/demo/demo-elements/user.bundle.html
+++ b/demo/demo-elements/user.bundle.html
@@ -13,12 +13,12 @@
 
 <script>
   (() => {
-    class XUSerHtmlBundleView extends Polymer.Element {
+    class XUserHtmlBundleView extends Polymer.Element {
       static get is() {
         return 'x-user-html-bundle-view';
       }
     }
 
-    customElements.define(XUSerHtmlBundleView.is, XUSerHtmlBundleView);
+    customElements.define(XUserHtmlBundleView.is, XUserHtmlBundleView);
   })();
 </script>
