--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -148,8 +148,8 @@
     <h3>Typed Route Parameters</h3>
     <p>
       The route can be configured so that only specific characters are accepted for a parameter value.
-      Other characters would not meet the check and continue the route resolution. Please note that you
-      only can use unnamed parameters in this case, as the custom RegExp is needed to achieve that behavior.
+      Other characters would not meet the check and the route resolution would continue to other routes.
+      You only can use unnamed parameters in this case, as it can only be achieved using the custom RegExp.
       One possible alternative is to use <a href="#vaadin-router-route-actions-demos">Route Actions</a>
       and check the <code>context.params</code>.</p>
     <vaadin-demo-snippet id="vaadin-router-route-parameters-demo-4" iframe-src="iframe.html">
