Demo and API docs improvements (#136)
Fixes #133
---

* Update lazy load examples

* Add HTML import for Polymer.importHref to lazy load demo

* Improve error logging, handle more edge cases

* Move fallback routes demo to the top

* Update API docs, add links to the demos for code snippets

* Minor lazy oading demo fixes

* Improve docs for setTriggers, refer to live examples

* Document the router constructor usage, reword API docs

* Restore the component in basic demo

* Improve markdown in demos, highlight route.redirectFrom

* Add the typed route parameters demo

* Add the route properties object description

* Address lazy loading demo review feedback

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -65,6 +65,11 @@
             });
           });
 
+          it('route should throw when created with only path property', () => {
+            const router = new Vaadin.Router(outlet);
+            expect(() => router.setRoutes([{path: '/'}])).to.throw(Error);
+          });
+
           it('route should throw when created with unknown bundle type', () => {
             const router = new Vaadin.Router(outlet);
             expect(() => router.setRoutes([{path: '/', bundle: () => {}}])).to.throw(Error);
@@ -570,7 +575,7 @@
               {path: '/', component: 'x-home-view', bundle: nonExistingPath},
             ]);
 
-            await expectException(router.render('/'));
+            await expectException(router.render('/'), ['Bundle not found']);
             expect(getBundleScripts(nonExistingPath).length).to.equal(0);
           });
 
