add an option to skip pushState throttling in tests
(skip if tests are run via test/index.html?no-throttle)

--- a/test/test-pushstate-throttler.html
+++ b/test/test-pushstate-throttler.html
@@ -72,6 +72,10 @@
     }
 
     TestPushstateThrottler.prototype.throttle = () => Promise.resolve();
+    if (runnerWindow.location.search.indexOf('no-throttle') >= 0) {
+      // skip throttling if the test is opened via test/index.html?no-throttle
+      return;
+    }
 
     var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
     var isSafari = /^Apple/.test(navigator.vendor);
