Remove unnecessary return value.

--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -404,7 +404,7 @@
               return new Promise(resolve => {
                 setTimeout(() => {
                   self.log('onAfterEnter.promise');
-                  resolve(22);
+                  resolve();
                 }, 100);
               });
             })},
